fixed spacing issued on homepage

--- a/app/assets/stylesheets/signup_form.scss
+++ b/app/assets/stylesheets/signup_form.scss
@@ -45,7 +45,6 @@ $primary-color: #066DEE;
 
 .home-sign-up-form {
   display: inline-block;
-  width: auto;
   margin-top: 150px;
   vertical-align: top;
 	line-height: 2.5em;
